fix(monitor): support to visit influxdb with vip

--- a/cmd/tke-installer/app/installer/manifests/charts/influxdb/templates/influxdb.yaml
+++ b/cmd/tke-installer/app/installer/manifests/charts/influxdb/templates/influxdb.yaml
@@ -36,7 +36,6 @@ spec:
 {{- if .Values.baremetalStorage }}
       nodeName: {{ .Values.nodeName }}
 {{- end }}
-      hostNetwork: true
       volumes:
       - name: data
 {{- if .Values.baremetalStorage }}
@@ -97,5 +96,9 @@ spec:
       port: 8086
       targetPort: 8086
       protocol: TCP
+{{- if .Values.HA }}
+      nodePort: 30086
+  type: NodePort
+{{- end }}
   selector:
     app: influxdb
