--- a/cmd/tke-installer/app/installer/manifests/charts/tke-auth/templates/tke-auth-api.yaml
+++ b/cmd/tke-installer/app/installer/manifests/charts/tke-auth/templates/tke-auth-api.yaml
@@ -59,6 +59,17 @@ spec:
             - matchExpressions:
               - key: node-role.kubernetes.io/master
                 operator: Exists
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - podAffinityTerm:
+              labelSelector:
+                matchExpressions:
+                - key: app
+                  operator: In
+                  values:
+                  - tke-auth-api
+              topologyKey: kubernetes.io/hostname
+            weight: 1
       containers:
         - name: tke-auth-api
           image: {{ .Values.api.image }}
