fix(installer): add registry auth pod affinity

--- a/cmd/tke-installer/app/installer/manifests/charts/tke-registry/templates/tke-registry-api.yaml
+++ b/cmd/tke-installer/app/installer/manifests/charts/tke-registry/templates/tke-registry-api.yaml
@@ -44,6 +44,17 @@ spec:
             - matchExpressions:
               - key: node-role.kubernetes.io/master
                 operator: Exists
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - podAffinityTerm:
+              labelSelector:
+                matchExpressions:
+                - key: app
+                  operator: In
+                  values:
+                  - tke-registry-api
+              topologyKey: kubernetes.io/hostname
+            weight: 1
       containers:
         - name: tke-registry-api
           image: {{ .Values.api.image }}
