Revert "feat(monitor): optimize monitor and alert (#2132)"
This reverts commit 1aad7f4fa5d0f9022e78a01b6ed12fcaf23c09d5.

--- a/cmd/tke-installer/app/installer/manifests/tke-notify-api/tke-notify-api.yaml
+++ b/cmd/tke-installer/app/installer/manifests/tke-notify-api/tke-notify-api.yaml
@@ -70,8 +70,8 @@ spec:
             periodSeconds: 20
           resources:
             limits:
-              cpu: 500m
-              memory: 2Gi
+              cpu: 100m
+              memory: 256Mi
             requests:
               cpu: 50m
               memory: 128Mi
@@ -140,10 +140,6 @@ data:
       [client.platform]
       api_server = "https://tke-platform-api"
       api_server_client_config = "/app/conf/tke-platform-config.yaml"
-
-    [features]
-       # Valid time units are "ns", "us" (or "µs"), "ms", "s", "m", "h"
-       message_ttl: "360h"
 
   tke-auth-webhook.yaml: |
     apiVersion: v1
