feat(monitor): support to monitor vm and expose influxdb svc as nodeport type (#2116)
* feat(monitor): support monitor kubevirt vms

support to collect vm metrics from libvirt level

Signed-off-by: willzgli <willzgli@tencent.com>

* fix(monitor): support configure vm alert rule

1. fix alert rule expression for vm
2. add vm name in alert message
3. round values in prometheus alert annotation to two decimals

Signed-off-by: willzgli <willzgli@tencent.com>

* fix(monitor): support edit vm alarmpolices

* feat(monitor): set retention days through configration file

* fix(monitor): add metric vm_memory_usage

* fix(monitor): support to visit influxdb with vip

* fix(monitor): expose influxdb svc as nodeport

expose influxdb svc as nodeport in non-ha mode  global cluster
and ha mode global cluster. it will unify the remote writing
address for promethues in global cluster and business cluster.

Signed-off-by: willzgli <willzgli@tencent.com>

Signed-off-by: willzgli <willzgli@tencent.com>
Co-authored-by: willzgli <willzgli@tencent.com>

--- a/cmd/tke-installer/app/installer/manifests/charts/influxdb/templates/influxdb.yaml
+++ b/cmd/tke-installer/app/installer/manifests/charts/influxdb/templates/influxdb.yaml
@@ -36,7 +36,6 @@ spec:
 {{- if .Values.baremetalStorage }}
       nodeName: {{ .Values.nodeName }}
 {{- end }}
-      hostNetwork: true
       volumes:
       - name: data
 {{- if .Values.baremetalStorage }}
@@ -84,3 +83,20 @@ spec:
       storage: 40Gi
   storageClassName: {{ .Values.nfsStorageClassName }}
 {{- end }}
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: influxdb
+  namespace: tke
+spec:
+  ports:
+    - name: remote-write
+      port: 8086
+      targetPort: 8086
+      protocol: TCP
+      nodePort: 30086
+  type: NodePort
+  selector:
+    app: influxdb
