--- a/cmd/tke-installer/app/installer/manifests/tke-monitor-controller/tke-monitor-controller.yaml
+++ b/cmd/tke-installer/app/installer/manifests/tke-monitor-controller/tke-monitor-controller.yaml
@@ -29,6 +29,17 @@ spec:
             - matchExpressions:
               - key: node-role.kubernetes.io/master
                 operator: Exists
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - podAffinityTerm:
+              labelSelector:
+                matchExpressions:
+                - key: app
+                  operator: In
+                  values:
+                  - tke-monitor-controller
+              topologyKey: kubernetes.io/hostname
+            weight: 1
       containers:
         - name: tke-monitor-controller
           image: {{ .Image }}
