feat(notify): optimize content of message 1. change alert time to local time 2. avoid using htlm escape charactors in message

--- a/cmd/tke-installer/app/installer/manifests/tke-notify-api/tke-notify-api.yaml
+++ b/cmd/tke-installer/app/installer/manifests/tke-notify-api/tke-notify-api.yaml
@@ -63,6 +63,8 @@ spec:
               mountPath: /app/certs
             - name: tke-notify-api-volume
               mountPath: /app/conf
+            - name: timezone
+              mountPath: /etc/localtime
           ports:
             - containerPort: 9457
           readinessProbe:
@@ -86,7 +88,6 @@ spec:
             requests:
               cpu: 50m
               memory: 128Mi
-
       volumes:
         - name: certs-volume
           configMap:
@@ -94,6 +95,10 @@ spec:
         - name: tke-notify-api-volume
           configMap:
             name: tke-notify-api
+        - name: timezone
+          hostPath:
+            path: /etc/localtime
+
 ---
 kind: ConfigMap
 apiVersion: v1
