--- a/cmd/tke-installer/app/installer/manifests/charts/ingress-nginx/templates/tke-ingress.yaml
+++ b/cmd/tke-installer/app/installer/manifests/charts/ingress-nginx/templates/tke-ingress.yaml
@@ -4,8 +4,15 @@ metadata:
   name: gateway
   namespace: tke
   annotations:
-    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
+    nginx.ingress.kubernetes.io/proxy-body-size: "0"
     nginx.ingress.kubernetes.io/proxy-buffer-size: 10k
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
+    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout invalid_header http_500 http_502 http_503 http_504"
+    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "0"
+    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "9"
 spec:
   rules:
     - host: "registry.tke.com"
