--- a/cmd/tke-installer/app/installer/manifests/charts/influxdb/values.yaml
+++ b/cmd/tke-installer/app/installer/manifests/charts/influxdb/values.yaml
@@ -10,3 +10,11 @@ cephFSStorageClassName:
 nfs:
 nfsPVCName:
 nfsStorageClassName:
+
+resources:
+  limits:
+    cpu: 4
+    memory: 4Gi
+  requests:
+    cpu: 50m
+    memory: 128Mi
