feat(installer): support access console by ip

--- a/cmd/tke-installer/app/installer/manifests/charts/ingress-nginx/templates/tke-ingress.yaml
+++ b/cmd/tke-installer/app/installer/manifests/charts/ingress-nginx/templates/tke-ingress.yaml
@@ -45,4 +45,13 @@ spec:
                 name: tke-gateway
                 port:
                   number: 80
+    - http:
+        paths:
+          - pathType: Prefix
+            path: "/"
+            backend:
+              service:
+                name: tke-gateway
+                port:
+                  number: 80
   ingressClassName: nginx
