fix(installer): install through installer sucess (#2262)
* fix(installer): add insecure-registry (#2258)

* refactor(logagent): update log file port (#1872)

* feat(installer): disabel import charts (#1879)

* feat(gateway): use node port instead (#1890)

* fix(installer): change install ingress step

* fix(installer): correct gateway manifest (#1902)

* fix(installer): stop uninstall gateway chart (#1903)

* fix(installer): remove servicename in deployment (#1960)

* feat(installer): transfor influxdb sts to depl (#1959)

* fix(installer): fix check influxdb func

* fix(installer): correct go lint

--- a/cmd/tke-installer/app/installer/manifests/charts/influxdb/templates/influxdb.yaml
+++ b/cmd/tke-installer/app/installer/manifests/charts/influxdb/templates/influxdb.yaml
@@ -1,5 +1,5 @@
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
 metadata:
   name: influxdb
   namespace: tke
@@ -7,10 +7,11 @@ metadata:
     app: influxdb
 spec:
   replicas: 1
-  serviceName: influxdb
   selector:
     matchLabels:
       app: influxdb
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
